[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetry-app"
version = "0.1.0"
description = "Telemetry Visualization App"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "plotly"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'