[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetry-app"
version = "0.1.0"
description = "Telemetry Visualization App"
readme = "README.md"
requires-python = ">=3.8"

packages = [
    { include = "telemetry" },
]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=1.5.0",
    "plotly>=5.13.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=3.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'